# ssh-manager

./: .gitignore  README.md  TODO.md  pyproject.toml
src/ssh_manager/: cli.py
src/ssh_manager/core/: model.py  parser.py  store.py  util.py
src/ssh_manager/tui/: app.css  app.py
tests/: test_cli_parse_filename.py  test_host_serialization.py  test_parse_duplicate_identityfile.py  test_parse_relocate_keys.py  test_parse_skip_default_hostname.py  test_parser.py  test_sanitize_and_store.py
